<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sayboard</string>

    <!--  Mic  -->

    <string name="mic_info_error">Error</string>
    <string name="mic_info_preparing">Preparing the recognizer</string>
    <string name="mic_info_ready">Ready</string>
    <string name="mic_info_error_failed">Failed to initialize recognizer %s</string>
    <string name="mic_info_recording">Say something</string>

    <string name="toast_error_no_previous_ime">No previous IME!</string>
    <string name="mic_error_no_recognizers">No Recognizers installed!</string>
    <string name="mic_error_no_permission">Microphone permission not granted!</string>
    <string name="mic_error_recognizer_error">Recognizer error</string>
    <string name="mic_error_mic_in_use">Microphone is already in use!</string>

    <string name="mic_audio_device_title">Audio Input Device</string>

    <string name="model_dialog_title">Select Model</string>

    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select</string>
    <string name="button_default">Default</string>
    <string name="button_confirm">OK</string>

    <string name="option_none">None</string>

    <string name="title_setup">Setup</string>
    <string name="title_models">Models</string>
    <string name="title_ui">User Interface</string>
    <string name="title_keyboard">Keyboard</string>
    <string name="title_logic">Logic</string>

    <!--  Setup  -->

    <string name="mic_permission_not_granted">Grant Microphone permission</string>
    <string name="mic_permission_granted">Microphone Permission Granted</string>

    <string name="keyboard_not_enabled">Enable Keyboard</string>
    <string name="keyboard_enabled">Keyboard Enabled</string>

    <string name="switch_keyboard">Switch Keyboard</string>
    <string name="open_ime_switcher">Open IME Switcher</string>
    <string name="open_ime_note">Note: you can open the IME switcher when the keyboard is open by long pressing the Mic button.</string>
    <string name="show_libraries">Show Used Libraries</string>

    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!--  Models Preferences  -->
    <string name="menu_models_add_server">Add Vosk Server</string>
    <string name="dialog_add_vosk_server_title">Add Vosk Server</string>
    <string name="dialog_add_vosk_server_hostname">Hostname</string>
    <string name="dialog_add_vosk_server_port">Port</string>
    <string name="dialog_add_vosk_server_add">Add</string>
    <string name="dialog_add_vosk_server_cancel">Cancel</string>

    <string name="models_download_state_unknown">Unknown</string>
    <string name="models_download_state_pending">Pending</string>
    <string name="models_download_state_download_started">Downloading</string>
    <string name="models_download_state_download_finished">Download Finished</string>
    <string name="models_download_state_unzip_started">Unzipping</string>
    <string name="models_download_state_unzip_finished">Unzipping Finished</string>
    <string name="models_download_state_finished">Finished</string>
    <string name="models_download_state_error">Error</string>
    <string name="models_download_state_canceled">Canceled</string>

    <string name="models_download_state">State: %s</string>
    <string name="models_pending_download_state">State: Pending Download</string>

    <string name="models_model_display_name_null">Null</string>

    <string name="models_download_dialog_title">Download Model</string>

    <string name="models_import_dialog_import">Import</string>
    <string name="models_import_dialog_title">Import Model</string>
    <string name="models_import_dialog_text_before_link">Manually download a Vosk model from </string>
    <string name="models_import_dialog_text_link">the Vosk website</string>
    <string name="models_import_dialog_text_after_link"> - make sure to pick a "small" model - and then choose it in the file picker after pressing import</string>

    <!-- UI Preferences -->
    <string name="ui_light_theme_header">Light Theme</string>
    <string name="ui_light_theme_foreground_material_you_title">Use Material You foreground color</string>
    <string name="ui_light_theme_foreground_color_title">Foreground color</string>
    <string name="ui_light_theme_background_color_title">Background color</string>


    <string name="ui_dark_theme_header">Dark Theme</string>
    <string name="ui_dark_theme_foreground_material_you_title">Use Material You foreground color</string>
    <string name="ui_dark_theme_foreground_color_title">Foreground color</string>
    <string name="ui_dark_theme_background_color_title">Background color</string>

    <string name="ui_theme_reset_color">Reset</string>

    <!--  Logic Preferences  -->
    <string name="logic_logic_header">Logic</string>
    <string name="logic_keep_screen_awake_title">Keep screen awake</string>
    <string name="logic_listen_immediately_title">Listen immediately</string>
    <string name="logic_listen_immediately_summery">Start listening immediately when the recognizer is ready.</string>
    <string name="logic_auto_switch_back_title">Auto switch back</string>
    <string name="logic_auto_switch_back_summery">Automatically switch to previous keyboard whenever the keyboard is hidden.</string>
    <string name="logic_keep_model_in_ram_title">Keep the model in RAM (when closed)</string>
    <string name="logic_keep_model_in_ram_summery">Keeps the model in RAM to make opening the keyboard faster. Takes more RAM.</string>
    <string name="logic_auto_capitalize_title">Auto Capitalize</string>
    <string name="logic_auto_capitalize_summary">Automatically capitalize the first letter after a period (where applicable).</string>
    <string name="logic_default_ime">Default IME</string>
    <string name="logic_return_to_default_ime_title">Return to default IME</string>
    <string name="logic_return_to_default_ime_summary">Return to the default IME instead of the previous IME when back is pressed.</string>

    <string name="p_keep_screen_awake_mode_never">Never</string>
    <string name="p_keep_screen_awake_mode_when_listening">When Listening</string>
    <string name="p_keep_screen_awake_mode_when_open">When Open</string>

    <!--  Keyboard Preferences  -->
    <string name="keyboard_height_header">Keyboard Height</string>

    <string name="keyboard_height_portrait_title">Keyboard height in portrait mode (%)</string>
    <string name="keyboard_height_landscape_title">Keyboard height in landscape mode (%)</string>

    <string name="keyboard_keys_header">Keys</string>
    <string name="keyboard_keys_top_title">Top Keys</string>
    <string name="keyboard_keys_left_title">Left Keys</string>
    <string name="keyboard_keys_right_title">Right Keys</string>

    <string name="keyboard_keys_dialog_key_entry">Label: %1$s, Text: %2$s</string>
    <string name="keyboard_keys_dialog_key_label_label">Label</string>
    <string name="keyboard_keys_dialog_key_text_label">Text</string>


    <!--  Notifications  -->
    <string name="notification_download_channel_name">Model download</string>
    <string name="notification_download_channel_description">Model download status notifications.</string>
    <string name="notification_download_title">Downloading Model</string>
    <string name="notification_download_content_unknown">Loading…</string>
    <string name="notification_download_content_downloading">Downloading in progress…</string>
    <string name="notification_download_content_unzipping">Extracting Model…</string>
    <string name="notification_download_content_finished">Download Finished!</string>
    <string name="notification_download_content_error">Error downloading Model</string>
</resources>
